fixtures/cs-rng-01/good/crypto-random-bytes.ts
import crypto from "crypto";

export function generateId() {
	return crypto.randomBytes(32);
}
