fixtures/cs-rng-01/bad/math-random-module-scope.ts
const sessionToken = Math.random().toString(36);

export function getSessionToken() {
	return sessionToken;
}
